fixing signup horizontal scroll bar

--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -8,7 +8,7 @@
     background: #DDDDDD;
     opacity: 0;
     animation: fade-in 2s forwards;
-    padding: 24px;
+    padding: 0px 24px;
 }
 
 .signup-container form {
